tests/lang/compile_fail/doc_on_priv_fn.kojs
@doc "Internal helper."
priv fn helper -> Int
  7
end

helper().print()
